@@ -1,3 +1,13 @@
+2012-10-17  Adam Barth  <abarth@webkit.org>
+
+        [V8] Don't generate code that declares visitDOMWrapper if we're not going to generate the implementation
+        https://bugs.webkit.org/show_bug.cgi?id=99653
+
+        Reviewed by Eric Seidel.
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+        (GenerateHeader):
+
 2012-10-17  David Grogan  <dgrogan@chromium.org>
 
         IndexedDB: Destroy leveldb directory if unknown schema is detected
